2025-02-16 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Several improvements to stack code generation.
	
2025-02-15 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve code generation for stack accesses.
	* src/mos6502/peeph.def:
	  Additional peephole rules.

2025-02-15 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCast.c,
	  src/SDCCerr.c,
	  src/SDCCsymt.h,
	  support/regression/cases/Makefile.in,
	  support/regression/tests/compound-literal.c:
	  Implement compound literals (C99, see RFE #332).

2025-02-14 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502/div.s,
	  device/lib/mos6502/ldiv.s,
	  device/lib/mos6502/_divuint.s,
	  device/lib/mos6502/_divulong.s:
	  Implement div and ldiv in assembly.

2025-02-13 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Remove incorrect workaround for gte-991019-1.
	  Fix shifts3 and muldiv failures on mos6502-stack-auto.

2025-02-11 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3830.c:
	  Disable test for ports where it fails due to known bug #3836.

2025-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve storeRegToAop(), shiftLLong() and shiftRLong().
	  Add some debugging messages and indentation cleanups.
	  genCmp() and genRRC() improvements.
	* support/ports/uc6502-stack-auto/spec.mk
	  add --i-code-in-asm to generated output.

2025-02-09 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix gcc-torture-execute-931102, pr42833 and pr51466 for mos6502-stack-auto.

2025-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3834.c:
	  Fix bug #3834.

2025-02-07 Gabriele Gorla <gorlik@yahoo.com>

	* device/lib/mos6502/_divulong.s:
	  minor improvements to divulong
	  
2025-02-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Basic null pointer optimization.
